--- a/admin/themes/roma/theme.css
+++ b/admin/themes/roma/theme.css
@@ -377,6 +377,15 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {background-co
 
 /* Album edit */
 
+.orCreateAlbum{
+  background-color: #333;
+  color: #777;
+}
+.orCreateAlbum:hover {
+  text-decoration: none;
+  color: #777;
+}
+
 #catModify input[type="text"], #catModify textarea{
   background-color: #444444;
   border: 1px solid #666;
